fix-truncation-desc

--- a/src/app/note-card/note-card.component.scss
+++ b/src/app/note-card/note-card.component.scss
@@ -37,7 +37,7 @@
             max-height: 80px;
             overflow-x: auto;
             word-break: break-all;
-
+            
             .fade-out-truncation {
                 position: absolute;
 
@@ -47,6 +47,12 @@
                 height: 50%;
                 width: 100%;
                 background: linear-gradient(to bottom, rgba(white, 0) 0%, rgba(white, 0.8) 50%, white 100%);
+            }
+
+            &:hover {
+                .fade-out-truncation {
+                    height: 0%;
+                }
             }
         }
 
